# generic-data

./: .travis.yml  CHANGELOG.md  README.md  Setup.hs  cabal.haskell-ci  generic-data.cabal  stack-default.yaml
.github/workflows/: ci.yml  haskell-ci.yml
orphans/Generic/Data/: Orphans.hs
src/Generic/: Data.hs
src/Generic/Data/: Data.hs  Defun.hs  Enum.hs  Functions.hs  Internal.hs  Meta.hs  Microsurgery.hs  Newtype.hs  Prelude.hs  Show.hs  Surgery.hs  Types.hs
src/Generic/Data/Internal/: Bi.hs  Compat.hs  Data.hs  Defun.hs  Enum.hs  Error.hs  Functions.hs  Generically.hs  Meta.hs  Microsurgery.hs  Newtype.hs  Prelude.hs  Read.hs  Resolvers.hs  Show.hs  Surgery.hs  Traversable.hs  Utils.hs
test/: bench.hs  doctest.hs  example.hs  inspection.hs  lens-surgery.hs  microsurgery.hs  one-liner-surgery.hs  record.hs  surgery.hs  unit.hs
test/Inspection/: Boilerplate.hs
