name:                generic-data
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Lysxia/generic-data#readme
license:             MIT
license-file:        LICENSE
author:              Li-yao Xia
maintainer:          lysxia@gmail.com
copyright:           2018 Li-yao Xia
category:            Other
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Generic.Data
    Generic.Data.Newtype
    Generic.Data.Internal.Data
    Generic.Data.Internal.Defun
    Generic.Data.Internal.Enum
    Generic.Data.Internal.Functions
    Generic.Data.Internal.Meta
    Generic.Data.Internal.Prelude
    Generic.Data.Internal.Show
  build-depends:
    contravariant,
    show-combinators,
    base >= 4.9 && < 5
  hs-source-dirs:      orphans
  exposed-modules:
    Generic.Data.Orphans
  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lysxia/generic-data
