name:                generic-data
version:             0.1.0.0
synopsis:            Utilities for GHC.Generics
description:         This package provides common functions on generic types.
                     See README.
homepage:            https://github.com/Lysxia/generic-data#readme
license:             MIT
license-file:        LICENSE
author:              Li-yao Xia
maintainer:          lysxia@gmail.com
copyright:           2018 Li-yao Xia
category:            Other
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2, GHC == 8.2.2

library
  hs-source-dirs:      src
  exposed-modules:
    Generic.Data
    Generic.Data.Types
    Generic.Data.Internal.Data
    Generic.Data.Internal.Defun
    Generic.Data.Internal.Enum
    Generic.Data.Internal.Functions
    Generic.Data.Internal.Meta
    Generic.Data.Internal.Newtype
    Generic.Data.Internal.Prelude
    Generic.Data.Internal.Resolvers
    Generic.Data.Internal.Show
  build-depends:
    contravariant,
    show-combinators,
    base >= 4.9 && < 5
  hs-source-dirs:      orphans
  exposed-modules:
    Generic.Data.Orphans
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite unit-test
  hs-source-dirs: test
  main-is: unit.hs
  build-depends:
    tasty,
    tasty-hunit,
    generic-data,
    base
  ghc-options: -Wall
  default-language: Haskell2010
  type: exitcode-stdio-1.0

source-repository head
  type:     git
  location: https://github.com/Lysxia/generic-data
