name:                generic-data
version:             0.4.0.0
synopsis:            Utilities for GHC.Generics
description:         This package provides common functions on generic types.
                     See README.
homepage:            https://github.com/Lysxia/generic-data#readme
license:             MIT
license-file:        LICENSE
author:              Li-yao Xia
maintainer:          lysxia@gmail.com
copyright:           2018 Li-yao Xia
category:            Other
build-type:          Simple
extra-source-files:  README.md, CHANGELOG.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.3, GHC == 8.6.1, GHC == 8.6.3

library
  hs-source-dirs:      src
  exposed-modules:
    Generic.Data
    Generic.Data.Types
    Generic.Data.Microsurgery
    Generic.Data.Internal.Compat
    Generic.Data.Internal.Data
    Generic.Data.Internal.Enum
    Generic.Data.Internal.Functions
    Generic.Data.Internal.Generically
    Generic.Data.Internal.Meta
    Generic.Data.Internal.Microsurgery
    Generic.Data.Internal.Newtype
    Generic.Data.Internal.Prelude
    Generic.Data.Internal.Resolvers
    Generic.Data.Internal.Show
    Generic.Data.Internal.Utils
  build-depends:
    base-orphans >= 0.8,
    contravariant,
    show-combinators,
    base >= 4.9 && < 5
  hs-source-dirs:      orphans
  exposed-modules:
    Generic.Data.Orphans
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite unit-test
  hs-source-dirs: test
  main-is: unit.hs
  build-depends:
    tasty,
    tasty-hunit,
    generic-data,
    base
  ghc-options: -Wall
  default-language: Haskell2010
  type: exitcode-stdio-1.0

test-suite record-test
  hs-source-dirs: test
  main-is: record.hs
  build-depends:
    generic-data,
    base
  ghc-options: -Wall
  default-language: Haskell2010
  type: exitcode-stdio-1.0

test-suite example-test
  hs-source-dirs: test
  main-is: example.hs
  build-depends:
    generic-data,
    base
  ghc-options: -Wall
  default-language: Haskell2010
  type: exitcode-stdio-1.0

test-suite microsurgery-test
  hs-source-dirs: test
  main-is: microsurgery.hs
  build-depends:
    tasty,
    tasty-hunit,
    generic-data,
    base
  ghc-options: -Wall
  default-language: Haskell2010
  type: exitcode-stdio-1.0

test-suite lens-surgery-test
  hs-source-dirs: test
  main-is: lens-surgery.hs
  build-depends:
    tasty,
    tasty-hunit,
    generic-data,
    generic-lens >= 1.1.0.0,
    base
  ghc-options: -Wall
  default-language: Haskell2010
  type: exitcode-stdio-1.0

source-repository head
  type:     git
  location: https://github.com/Lysxia/generic-data
